nginx/db_demo/db-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Frame-Options: SAMEORIGIN";
      more_set_headers "Referrer-Policy: same-origin";
      more_set_headers "Strict-Transport-Security:: 31536000; includeSubDomains";
      more_set_headers "Expect-CT: max-age=86400, enforce";
      more_set_headers "X-XSS-Protection: 1; mode=block";

spec:
  rules:
  - host: ${BASE_DOMAIN}
    http:
      paths:
      - path: /db-demo
        pathType: Exact
        backend:
          service:
            name: db-demo
            port:
              number: 80
